tests/snapshots/generator__advanced_create_files@_bytes_100000_exact_1_1_1.snap
---
source: tests/generator.rs
expression: "&golden"
---
About 1 file will be generated in approximately 1 directory distributed across a tree of maximum depth 1 where each directory contains approximately 1 other directory. Each file will contain approximately 100,000 bytes of random data totaling exactly 100000 bytes.
Created 1 file (100.0 kB) across 2 directories.

/0
/0.dir
/1.dir

0x4c23c331fedaa132
